Updated saliency notebook

--- a/notebooks/Evaluation - Saliency.ipynb
+++ b/notebooks/Evaluation - Saliency.ipynb
@@ -85,7 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "args"
+    "_eval_dset = SSL_Dataset(\"eurosat_rgb\", train=False,  data_dir=\"./data/\", seed=seed_wanted)\n",
+    "eval_dset = _eval_dset.get_dset()"
    ]
   },
   {
@@ -95,19 +96,23 @@
    "outputs": [],
    "source": [
     "saliency = {} #will contain saliency maps for all runs\n",
-    "N = 3 # how many images should be looked at\n",
+    "correct_prediction = {} # will contain predictions\n",
+    "numbers_to_skip  = []\n",
+    "N = 2700 # how many images should be looked at\n",
     "\n",
-    "_eval_dset = SSL_Dataset(\"eurosat_rgb\", train=False,  data_dir=\"./data/\", seed=seed_wanted)\n",
-    "eval_dset = _eval_dset.get_dset()\n",
+    "#Start with num labels = 50, will break if smallest not 50!\n",
+    "runs = list(zip(checkpoints,run_args))\n",
+    "runs.reverse()\n",
     "\n",
     "#Iterate over runs\n",
-    "for path, args in zip(checkpoints,run_args):\n",
+    "for path, args in runs:\n",
     "    print(\"------------ RUNNING \", path, \" -----------------\")\n",
     "    print(args)\n",
     "    args[\"data_dir\"] = \"./data/\"\n",
     "    args[\"use_train_model\"] = False\n",
     "    args[\"load_path\"] = path\n",
     "    saliency[args[\"numlabels\"]] = []\n",
+    "    correct_prediction[args[\"numlabels\"]] = []\n",
     "    \n",
     "    if args[\"seed\"] != seed_wanted:\n",
     "        continue\n",
@@ -138,8 +143,30 @@
     "    \n",
     "    for image, target in tqdm(eval_loader):\n",
     "        image = image.type(torch.FloatTensor).cuda()\n",
+    "        \n",
+    "        # Check prediction\n",
+    "        logit = net(image)\n",
+    "        correct = logit.cpu().max(1)[1].eq(target).sum().numpy()\n",
+    "                        \n",
+    "        # Check if correct result for num_labels 50\n",
+    "        if args[\"numlabels\"] == 50:\n",
+    "            if correct:\n",
+    "                numbers_to_skip.append(idx)\n",
+    "                idx = idx + 1\n",
+    "                continue\n",
+    "            else:\n",
+    "                idx = idx + 1\n",
+    "                \n",
+    "        if idx in numbers_to_skip:\n",
+    "            idx = idx + 1\n",
+    "            continue\n",
+    "        else:\n",
+    "            idx = idx + 1\n",
+    "            \n",
+    "        correct_prediction[args[\"numlabels\"]].append(correct)\n",
+    "        \n",
     "        image_original.append(inv_transf(image[0].transpose(0,2).cpu().numpy()).transpose(0,2).numpy())\n",
-    "        idx = idx + 1\n",
+    "        \n",
     "\n",
     "        # Use smooth grad by sampling the gradients with some noise added to image to get a smoother output\n",
     "        param_n = 100 #nr of images to sample\n",
@@ -162,6 +189,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save results\n",
+    "np.save(\"saliency.npy\",saliency)\n",
+    "np.save(\"image_original.npy\",image_original)\n",
+    "np.save(\"correct_prediction.npy\",correct_prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -170,7 +209,7 @@
     "def plot_examples(images,saliency,numlabels=[50,100,500,1000,2000,3000],indices=[2]):\n",
     "    \"\"\" Small function to plot the results\n",
     "    \"\"\"\n",
-    "    fig = plt.figure(figsize=(10, 1.5*len(indices)), dpi=150)\n",
+    "    fig = plt.figure(figsize=(15 * len(numlabels) / 6, 1.5*len(indices)), dpi=300)\n",
     "    offset = len(numlabels) + 1\n",
     "    images = np.asarray(images)\n",
     "    for plot_nr,idx in enumerate(indices):\n",
@@ -184,17 +223,21 @@
     "            ax = fig.add_subplot(len(indices), offset, offset*plot_nr+2+nl_idx, xticks=[], yticks=[])\n",
     "            sal = np.flipud(saliency[nl][idx])\n",
     "            plt.contourf(sal,cmap=\"gnuplot2\")\n",
-    "            \n",
-    "indices_to_plot = np.arange(0,3)\n",
-    "plot_examples(image_original,saliency,indices=indices_to_plot)"
+    "    plt.savefig(\"saliency.png\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "indices_to_plot = np.arange(110,120)\n",
+    "# print(correct_prediction[3000][20:20])\n",
+    "plot_examples(image_original,saliency,numlabels=[50,3000],indices=indices_to_plot)"
+   ]
   }
  ],
  "metadata": {
