- Added loading cell

--- a/notebooks/Evaluation - Saliency.ipynb
+++ b/notebooks/Evaluation - Saliency.ipynb
@@ -201,6 +201,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load results\n",
+    "saliency = np.load(\"saliency.npy\")\n",
+    "image_original = np.load(\"image_original.npy\")\n",
+    "correct_prediction = np.load(\"correct_prediction.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
