Improved Single Run notebook. Moved plot_examples and plot_cmatrix functions to utils.py

--- a/notebooks/Evaluation - Single Run.ipynb
+++ b/notebooks/Evaluation - Single Run.ipynb
@@ -15,34 +15,14 @@
     "\n",
     "from tqdm import tqdm,trange\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import classification_report,confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import classification_report\n",
     "import torch\n",
-    "import pandas\n",
     "\n",
     "from datasets.ssl_dataset import SSL_Dataset\n",
     "from datasets.data_utils import get_data_loader\n",
     "from utils import get_model_checkpoints\n",
     "from utils import net_builder\n",
-    "\n",
-    "def plot_examples(images,labels,encoding, prediction=None):\n",
-    "    fig = plt.figure(figsize=(8, 5), dpi=150)\n",
-    "    for idx,img in enumerate(images[:32]):\n",
-    "        ax = fig.add_subplot(4, 8, idx+1, xticks=[], yticks=[])\n",
-    "        if np.max(img) > 1.5:\n",
-    "            img = img / 255\n",
-    "        plt.imshow(img)\n",
-    "        if prediction is not None:\n",
-    "            label = \"GT: \" + encoding[labels[idx]] + \"\\n PR: \" + encoding[prediction[idx]]\n",
-    "        else:\n",
-    "            label = encoding[labels[idx]]    \n",
-    "        plt.title(str(label),fontsize=5)\n",
-    "        \n",
-    "def plot_cmatrix(pred,labels,encoding):\n",
-    "    fig = plt.figure(figsize=(8, 5), dpi=150)\n",
-    "    cm = confusion_matrix(labels,pred)\n",
-    "    disp = ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=encoding)\n",
-    "    disp.plot(xticks_rotation=\"vertical\")"
+    "from utils import plot_examples, plot_cmatrix"
    ]
   },
   {
@@ -58,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/scratch/fixmatch_results/nr_of_labels_supervised/eurosat_rgb\""
+    "path = \"experiments\\\\ucm_runs\\\\ucm\\\\FixMatch_archefficientnet-b2_batch16_confidence0.95_lr0.03_uratio4_wd0.00075_wu1.0_seed0_numlabels105_optSGD\""
    ]
   },
   {
@@ -100,18 +80,20 @@
     "checkpoint = torch.load(checkpoint_path)\n",
     "load_model = (checkpoint[\"train_model\"] if args[\"use_train_model\"] else checkpoint[\"eval_model\"])\n",
     "\n",
+    "_eval_dset = SSL_Dataset(name=args[\"dataset\"], train=False, data_dir=args[\"data_dir\"], seed=args[\"seed\"])\n",
+    "eval_dset = _eval_dset.get_dset()\n",
+    "\n",
     "_net_builder = net_builder(args[\"net\"],None,{})\n",
     "\n",
-    "net = _net_builder(num_classes=args[\"num_classes\"])\n",
+    "net = _net_builder(num_classes=_eval_dset.num_classes, in_channels=_eval_dset.num_channels)\n",
     "net.load_state_dict(load_model)\n",
     "if torch.cuda.is_available():\n",
     "    net.cuda()\n",
     "net.eval()\n",
     "\n",
-    "_eval_dset = SSL_Dataset(name=args[\"dataset\"], train=False, data_dir=args[\"data_dir\"], seed=args[\"seed\"])\n",
-    "eval_dset = _eval_dset.get_dset()\n",
     "\n",
-    "eval_loader = get_data_loader(eval_dset, args[\"batch_size\"], num_workers=1)"
+    "\n",
+    "eval_loader = get_data_loader(eval_dset, args[\"batch\"], num_workers=1)"
    ]
   },
   {
@@ -157,7 +139,7 @@
     "        preds.append(logit.cpu().max(1)[1])\n",
     "        labels.append(target)\n",
     "labels = torch.cat(labels).numpy()\n",
-    "preds = torch.cat(preds).numpy()\n"
+    "preds = torch.cat(preds).numpy()"
    ]
   },
   {
@@ -166,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_examples(images[32:],labels,label_encoding,preds)"
+    "plot_examples(images,labels,label_encoding,preds)"
    ]
   },
   {
@@ -192,42 +174,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cmatrix(preds,labels,label_encoding)"
+    "plot_cmatrix(preds,labels,label_encoding, figsize=(8, 5),dpi=150, font_scale=1.1, save_fig_name=str(args[\"dataset\"])+\"_\"+str(args[\"numlabels\"])+\"_cm.png\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Store results in a file\n",
-    "import pandas as pd\n",
-    "test_frame = pd.DataFrame(test_rtrain_reporteport).transpose()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_frame.to_csv(FLAGS.ckpt + \"_test_results.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (torchmatch)",
    "language": "python",
-   "name": "python3"
+   "name": "torchmatch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -239,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
