Updating Single Run Notebook to print UCM images to an image. Updating Class F1 notebook to automatically switch between ucm and eurosats.

--- a/notebooks/Evaluation - Class F1 Plot.ipynb
+++ b/notebooks/Evaluation - Class F1 Plot.ipynb
@@ -33,8 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_folder = R\"D:\\Arbeit\\Results\\fixmatch_results\\F1 Class plot/\" #Path where tmp csv files are stored\n",
-    "folder = R\"D:\\Arbeit\\Results\\fixmatch_results\\F1 Class plot/eurosat_rgb/\" #Path to the runs to load \n",
+    "csv_folder = \"/home/gabrielemeoni/project/SSLRS\" #Path where tmp csv files are stored\n",
+    "folder = \"/scratch/fixmatch_results/runs_new_paper_version/nr_of_labels/ucm\" #Path to the runs to load \n",
     "sort_criterion = \"numlabels\" # Accepted net, numlabels\n",
     "seed_wanted = [0,1,2] # Seed wanted (the others will be filtered)"
    ]
@@ -167,9 +167,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = pd.melt(small_df, id_vars='numlabels', value_vars=['AnnualCrop', 'Forest', 'HerbaceousVegetation', 'Highway',\n",
+    "class_names_dict={'eurosat_rgb' : ['AnnualCrop', 'Forest', 'HerbaceousVegetation', 'Highway',\n",
     "       'Industrial', 'Pasture', 'PermanentCrop', 'Residential', 'River',\n",
-    "       'SeaLake'])\n",
+    "       'SeaLake'], 'eurosat_ms' : ['AnnualCrop', 'Forest', 'HerbaceousVegetation', 'Highway',\n",
+    "       'Industrial', 'Pasture', 'PermanentCrop', 'Residential', 'River',\n",
+    "       'SeaLake'], 'ucm' : [\"agricultural\", \"airplane\", \"baseballdiamond\", \"beach\", \"buildings\",\"chaparral\",\"denseresidential\",\"forest\", \"freeway\", \"golfcourse\",\"harbor\", \"intersection\", \"mediumresidential\", \"mobilehomepark\",\"overpass\",\"parkinglot\",\"river\", \"runway\", \"sparseresidential\", \"storagetanks\", \"tenniscourt\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = pd.melt(small_df, id_vars='numlabels', value_vars=class_names_dict[args['dataset']])\n",
     "l.columns = [\"# of labels\", \"Class\", \"F1 Score\"]"
    ]
   },
@@ -186,10 +197,28 @@
     "with sns.plotting_context():\n",
     "    p = sns.catplot(x=\"F1 Score\", y=\"Class\", hue=\"# of labels\", data=l, kind=\"bar\",palette=\"crest\",height=10,aspect=1.25)\n",
     "    # p.set_xticklabels(rotation=90)\n",
-    "    p.set(xlim=[0.8,1.01])\n",
+    "    p.set(xlim=[0.3,1.01])\n",
     "\n",
     "    # p.set(xticks=[0.4,0.6,0.8,1.0])\n",
     "plt.savefig(\"class_f1.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.loc[l[\"Class\"]==l[\"Class\"][26]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.loc[l[\"Class\"]==\"mediumresidential\"]"
    ]
   },
   {
