--- a/notebooks/Evaluation - Single Run.ipynb
+++ b/notebooks/Evaluation - Single Run.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "use_all_seeds=True\n",
-    "path = eurosat_rgb_path"
+    "path = ucm_path"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_examples(images,labels,label_encoding,preds)"
+    "plot_examples(images,labels,label_encoding, (10,6), 160, 6,preds, args[\"dataset\"]+\".png\")"
    ]
   },
   {
