Fixed bug in Single run. Added per class info in F1.

--- a/notebooks/Evaluation - Class F1 Plot.ipynb
+++ b/notebooks/Evaluation - Class F1 Plot.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "csv_folder = \"/home/gabrielemeoni/project/SSLRS\" #Path where tmp csv files are stored\n",
-    "folder = \"/scratch/fixmatch_results/runs_new_paper_version/nr_of_labels/ucm\" #Path to the runs to load \n",
+    "folder = \"/scratch/fixmatch_results/new_runs/nr_of_labels/eurosat_rgb\" #Path to the runs to load \n",
     "sort_criterion = \"numlabels\" # Accepted net, numlabels\n",
     "seed_wanted = [0,1,2] # Seed wanted (the others will be filtered)"
    ]
@@ -144,21 +144,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "small_df = pd.read_csv(csv_folder + \"_test_results.csv\")\n",
+    "#small_df = pd.read_csv(csv_folder + \"_test_results.csv\")\n",
     "small_df = small_df.drop(labels=[\"pretrained\",\"supervised\",\"net\",\"accuracy\",\"batch\",\"confidence\",\"lr\",\"uratio\",\"wd\",\"wu\",\"opt\",\"iterations\",\"load_path\"],axis=1)\n",
     "small_df = small_df.groupby('numlabels').mean().reset_index()\n",
     "# small_df = small_df.set_index(\"numlabels\")\n",
     "small_df = small_df.reindex(sorted(small_df.columns), axis=1)\n",
     "small_df = small_df.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "small_df"
    ]
   },
   {
@@ -175,13 +166,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding info on numlabels per class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in range(len(small_df[\"numlabels\"])):\n",
+    "    small_df[\"numlabels\"][n]=str(small_df[\"numlabels\"][n]) + \" (\" + str(small_df[\"numlabels\"][n]/len(class_names_dict[args['dataset']]))+\")\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "l = pd.melt(small_df, id_vars='numlabels', value_vars=class_names_dict[args['dataset']])\n",
-    "l.columns = [\"# of labels\", \"Class\", \"F1 Score\"]"
+    "l.columns = [\"# of labels (per class)\", \"Class\", \"F1 Score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.loc[l[\"Class\"]==\"denseresidential\"]"
    ]
   },
   {
@@ -195,7 +212,7 @@
     "sns.set()\n",
     "sns.set(font_scale=3)  # crazy big\n",
     "with sns.plotting_context():\n",
-    "    p = sns.catplot(x=\"F1 Score\", y=\"Class\", hue=\"# of labels\", data=l, kind=\"bar\",palette=\"crest\",height=10,aspect=1.25)\n",
+    "    p = sns.catplot(x=\"F1 Score\", y=\"Class\", hue=\"# of labels (per class)\", data=l, kind=\"bar\",palette=\"crest\",height=10,aspect=1.25)\n",
     "    # p.set_xticklabels(rotation=90)\n",
     "    p.set(xlim=[0.3,1.01])\n",
     "\n",
