--- a/notebooks/Evaluation - Single Run.ipynb
+++ b/notebooks/Evaluation - Single Run.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "use_all_seeds=True\n",
-    "path = ucm_path"
+    "path = eurosat_rgb_path"
    ]
   },
   {
@@ -183,13 +183,21 @@
     "    labels, preds = [],[]\n",
     "    \n",
     "    for seed in [0,1,2]:\n",
-    "        print(\"Processing seed:\", colored(seed,\"red\"))\n",
     "        \n",
+    "        print(\"Processing seed:\", colored(seed,\"red\"))\n",
+    "        checkpoint_path=checkpoints[0].replace(\"seed\"+str(checkpoints[0][checkpoints[0].find(\"seed\")+4]), \"seed\"+str(seed))\n",
+    "        print(checkpoint_path)\n",
+    "        \n",
+    "        checkpoint = torch.load(checkpoint_path,map_location='cuda:0')\n",
+    "        load_model = (checkpoint[\"train_model\"] if args[\"use_train_model\"] else checkpoint[\"eval_model\"])\n",
+    "        _net_builder = net_builder(args[\"net\"],False,{})\n",
     "        _eval_dset = SSL_Dataset(name=args[\"dataset\"], train=False, data_dir=args[\"data_dir\"], seed=seed)\n",
     "        eval_dset = _eval_dset.get_dset()\n",
-    "    \n",
-    "        _net_builder = net_builder(args[\"net\"],None,{})\n",
-    "    \n",
+    "        net = _net_builder(num_classes=_eval_dset.num_classes, in_channels=_eval_dset.num_channels)\n",
+    "        net.load_state_dict(load_model)\n",
+    "        if torch.cuda.is_available():\n",
+    "            net.cuda()\n",
+    "        net.eval()\n",
     "        eval_loader = get_data_loader(eval_dset, args[\"batch\"], num_workers=1)\n",
     "        \n",
     "        #Assemble a batch\n",
@@ -255,6 +263,13 @@
    "source": [
     "plot_cmatrix(preds,labels,label_encoding, figsize=(10, 8),dpi=150, class_names_font_scale=1.6, matrix_font_size=12, save_fig_name=str(args[\"dataset\"])+\"_\"+str(args[\"numlabels\"])+\"_cm.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
