added linebreaks in figure and fixed float to int

--- a/notebooks/Evaluation - Class F1 Plot.ipynb
+++ b/notebooks/Evaluation - Class F1 Plot.ipynb
@@ -69,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "results = []\n",
@@ -179,7 +181,7 @@
    "outputs": [],
    "source": [
     "for n in range(len(small_df[\"numlabels\"])):\n",
-    "    small_df[\"numlabels\"][n]=str(small_df[\"numlabels\"][n]) + \" (\" + str(small_df[\"numlabels\"][n]/len(class_names_dict[args['dataset']]))+\")\""
+    "    small_df[\"numlabels\"][n]=str(small_df[\"numlabels\"][n]) + \" (\" + str(small_df[\"numlabels\"][n]//len(class_names_dict[args['dataset']]))+\")\""
    ]
   },
   {
@@ -189,7 +191,7 @@
    "outputs": [],
    "source": [
     "l = pd.melt(small_df, id_vars='numlabels', value_vars=class_names_dict[args['dataset']])\n",
-    "l.columns = [\"# of labels (per class)\", \"Class\", \"F1 Score\"]"
+    "l.columns = [\"# of labels \\n(per class)\", \"Class\", \"F1 Score\"]"
    ]
   },
   {
@@ -212,7 +214,7 @@
     "sns.set()\n",
     "sns.set(font_scale=3)  # crazy big\n",
     "with sns.plotting_context():\n",
-    "    p = sns.catplot(x=\"F1 Score\", y=\"Class\", hue=\"# of labels (per class)\", data=l, kind=\"bar\",palette=\"crest\",height=10,aspect=1.25)\n",
+    "    p = sns.catplot(x=\"F1 Score\", y=\"Class\", hue=\"# of labels \\n(per class)\", data=l, kind=\"bar\",palette=\"crest\",height=10,aspect=1.25)\n",
     "    # p.set_xticklabels(rotation=90)\n",
     "    p.set(xlim=[0.3,1.01])\n",
     "\n",
