--- a/notebooks/Evaluation - time.ipynb
+++ b/notebooks/Evaluation - time.ipynb
@@ -34,10 +34,11 @@
    "outputs": [],
    "source": [
     "#Path to the runs to load\n",
-    "csv_folder = \"/home/gabrielemeoni/project/SSLRS/test\"\n",
-    "folder = \"/scratch/fixmatch_results/new_runs/efficientnet_comparison/eurosat_rgb/\"\n",
+    "csv_folder = \"/home/gabrielemeoni/project/SSLRS/\"\n",
+    "dataset=\"eurosat_ms\"\n",
+    "folder = \"/scratch/fixmatch_results/sandy_runs/nr_of_labels/\"\n",
     "sort_criterion = \"net\" # Accepted net, numlabels\n",
-    "seed_wanted = 1 # Seed wanted (the others will be filtered)"
+    "seed_wanted = 2# Seed wanted (the others will be filtered)"
    ]
   },
   {
@@ -53,6 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "folder=os.path.join(folder, dataset)\n",
     "checkpoints, run_args, timing_info = get_model_checkpoints_and_timing_info(folder)\n",
     "timing_info_dict = dict(zip(checkpoints, timing_info))\n",
     "if os.name == 'nt':\n",
@@ -105,8 +107,16 @@
     "    big_df = big_df.append(df)\n",
     "\n",
     "big_df=big_df.sort_values(by=[sort_criterion], axis=0)\n",
-    "big_df.to_csv(csv_folder + \"_time_results_seed\"+str(seed_wanted)+\".csv\")"
+    "big_df.to_csv(os.path.join(csv_folder,\"time_results_\"+dataset+\"_seed_\"+str(seed_wanted)+\".csv\"))\n",
+    "print(\"File saved at: \", os.path.join(csv_folder,\"time_results_\"+dataset+\"_seed_\"+str(seed_wanted)+\".csv\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
